@@ -246,3 +246,6 @@ reserved:	LOW-VALUES=LOW-VALUE
 reserved:	ORGANISATION=ORGANIZATION
 reserved:	SYNCHRONISED=SYNCHRONIZED
 reserved:	TIMEOUT=TIME-OUT
+reserved:	VALUES=VALUE
+reserved:	ZEROES=ZERO
+reserved:	ZEROS=ZERO
